Construção HTML primeira página v3 50 min

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
     <meta name="theme-color" content="#34CB79" />
 
     <title>Ecoleta</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
